traefik/ip_whitelist.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 45.76.188.6
