traefik/middleware_redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
