traefik/ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-realip
  namespace: api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.octosplay.com`)
      services:
        - name: apache2api
          port: 80
      middlewares:
        - name: api-realapi
        - name: api-ipwhitelist
